2013-04-28  Ian Beckwith  <ianb@erislabs.net>

	* musicbrainz: fixed mbid search.

2013-04-27  Ian Beckwith  <ianb@erislabs.net>

	* javasun: fixed test.

2013-04-24  Ian Beckwith  <ianb@erislabs.net>

	* Rewrote deblists for new xapian search.
	  + -author, -lists, -lang no longer supported.
	  + added -ml and -mv to show message id links and list view.
	* Removed happypenguin. Currently defunct and they are talking
	  about a rewrite, so when it is back it will need fixing anyway.

2012-10-22  Ian Beckwith  <ianb@erislabs.net>

	* Fixed elvi: cisco, slashdot, slinuxdoc.
	* Removed elvi: scroogle (site gone).
	* Fixed tests: acronym, bbcnews, bugzilla, cisco, cite[1],
	  currency, discogs, excite, fsfdir, gcache, github, imdb,
	  ixquick, lastfm, leodict, openbsd[2], scholar.
	* test/Makefile.am: Added missing tests to EXTRA_DIST

2012-06-28  Manolo Martínez  <manolo@austrohungaro.com>

	* examples/hooks.lua: Added elinks integration script

2012-06-28  Ivy Foster  <joyfulgirl@archlinux.us>

	* Further simplified searchable bookmarks

2012-06-28  Thomas Zervogiannis <tzervo@gmail.com>

	* Simplified searchable bookmarks

2012-06-27  Ivy Foster  <joyfulgirl@archlinux.us>

	* Fixed arg parsing in searchable bookmarks
	* New variable: SURFRAW_bookmark_search_elvis
	  + When using searchable bookmarks, if all else fails
	    run this elvis. Defaults to google
	* Updated manual to reflect changes to bookmarks
	* duckduckgo: Removed -p option. -safe still works.
	  + Prevents clobbering global option -p[rint].

2012-06-27  Thomas Zervogiannis <tzervo@gmail.com>

	* Added searchable bookmarks

	  + Bookmarks can now be searchable by adding '%s' to
	    the url string.

2012-06-01  Jason Ryan	<jasonwryan@surfraw.org>

	* New elvi: github (search github.com)

2012-03-17  Ivy Foster  <joyfulgirl@archlinux.us>

	* Fix a typo in duckduckgo code.

2012-03-17  Ivy Foster  <joyfulgirl@archlinux.us>

	* Keep duckduckgo's -l[ucky] from clobbering -lh
