@@ -1,2 +1,3 @@
-springer mexican symposium medical physics
-Mexican Symposium on Medical Physics
+springer Ludger Teixeira
+Figura
+
