@@ -1,6 +1,7 @@
 2013-04-28  Ian Beckwith  <ianb@erislabs.net>
 
 	* musicbrainz: fixed mbid search.
+	* springer: fixed test.
 
 2013-04-27  Ian Beckwith  <ianb@erislabs.net>
 
